--- a/index.html
+++ b/index.html
@@ -14,74 +14,16 @@
 </header>
 
 <nav>
-    <a href="#about">About</a>
-    <a href="#versions">Versions</a>
-    <a href="#items">Items</a>
-    <a href="#howtoget">How to Get</a>
-    <a href="#downloads">Downloads</a>
+    <a href="index.html">Home</a>
+    <a href="versions.html">Versions</a>
+    <a href="items.html">Items</a>
+    <a href="howtoget.html">How to Get</a>
 </nav>
 
-<div class="container" id="about">
-    <h2>About the Pack</h2>
-    <p>This texture pack adds BunnyBux, Master Sword, Cat Currency, Money, Emeralds, Witch Hat, French Fries, Burger, and Cat Cafe items. Some items have recipes via a datapack (up to v1.0.2).</p>
-</div>
-
-<div class="container" id="versions">
-    <h2>Versions & Changelog</h2>
-
-    <h3 class="version-header">Texture Pack Versions</h3>
-    <div class="collapsible">
-        <ul>
-            <li>v1.0: Adds BunnyBux, Witch Hat, Blue & Pink Emeralds, Cat Currency, French Fries, Master Sword, Money</li>
-            <li>v1.1: Bug fixes</li>
-            <li>v1.2: Bug fixes</li>
-            <li>v1.3: Adds Burger and Cat Cafe French Fries</li>
-        </ul>
-    </div>
-
-    <h3 class="version-header">Datapack Versions (Recipes)</h3>
-    <div class="collapsible">
-        <ul>
-            <li>v1.0.0: Blue Emerald</li>
-            <li>v1.0.1: Master Sword</li>
-            <li>v1.0.2: Pink Emerald & Money</li>
-        </ul>
-    </div>
-</div>
-
-<div class="container" id="items">
-    <h2>Items</h2>
-
-    <h3>BunnyBux</h3>
-    <img src="images/bunnybux.png" alt="BunnyBux" class="item-image">
-
-    <h3>Master Sword</h3>
-    <img src="images/mastersword.png" alt="Master Sword" class="item-image">
-
-    <h3>Cat Currency</h3>
-    <img src="images/catcurrency.png" alt="Cat Currency" class="item-image">
-
-    <h3>Witch Hat</h3>
-    <img src="images/witchhat.png" alt="Witch Hat" class="item-image">
-
-    <h3>Blue & Pink Emeralds</h3>
-    <img src="images/blue_emerald.png" alt="Blue Emerald" class="item-image">
-    <img src="images/pink_emerald.png" alt="Pink Emerald" class="item-image">
-
-    <h3>Burger & Cat Cafe French Fries</h3>
-    <img src="images/burger.png" alt="Burger" class="item-image">
-    <img src="images/catcafe_fries.png" alt="Cat Cafe French Fries" class="item-image">
-
-    <h3>French Fries</h3>
-    <img src="images/fries.png" alt="French Fries" class="item-image">
-
-    <h3>Money</h3>
-    <img src="images/money.png" alt="Money" class="item-image">
-</div>
-
-<div class="container" id="howtoget">
-    <h2>How to Get Items</h2>
-    <div id="howtoget-container"></div>
+<div class="container" id="summary">
+    <h2>Summary</h2>
+    <p>This pack adds BunnyBux, Master Sword, Cat Currency, Money, Emeralds, Witch Hat, French Fries, Burger, and Cat Cafe items. Some items have recipes via a datapack (v1.0.0–v1.0.2).</p>
+    <p>Explore the details using the navigation links above.</p>
 </div>
 
 <div class="container" id="downloads">
@@ -93,4 +35,14 @@
         <li><a href="downloads/v1.3.zip">Texture Pack v1.3</a></li>
         <li><a href="downloads/datapack_v1.0.0.zip">Datapack v1.0.0</a></li>
         <li><a href="downloads/datapack_v1.0.1.zip">Datapack v1.0.1</a></li>
-        <li><a href="downloads/datapack_v1.0.2.zip">Datapack v1.0.2
+        <li><a href="downloads/datapack_v1.0.2.zip">Datapack v1.0.2</a></li>
+    </ul>
+</div>
+
+<footer>
+    Texture Pack Wiki &copy; 2025 | Created by Grant
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
